# QVR

./: .gitignore  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  QVR.c
gradle/wrapper/: gradle-wrapper.properties
